# vst_experiment

./: .cbmignore  .clang-format  .clang-format-ignore  .gitignore  CLAUDE.md  CMakeLists.txt  README.md  build-vst3projectgenerator.sh  build.ps1  build.sh  opencode.json  setup-vst-project.ps1  setup-vst-project.sh
.claude/rules/: code_design.md  cpp_code_style.md
.claude/skills/create-task/: SKILL.md
.claude/skills/todo_to_github_issue/: SKILL.md
.claude/skills/work-on/: SKILL.md
.zed/: settings.json
project_management/requirements/: dartui_plugin.md  startup_requirements.md
project_management/tracking/done/: task_001.md  task_002.md  task_003.md  task_004.md
src/: main.cpp
src/common/: CMakeLists.txt
src/common/include/vst_common/: frequency_model.h  frequency_parameter.h  generic_list_model.h  generic_list_parameter.h  model_range_parameter.h  model_sample_accurate_parameter.h  parameter_model.h  parameters.h  volume_model.h  volume_parameter.h  waveform_model.h  waveform_parameter.h
src/common/source/: frequency_parameter.cpp
src/gain-plugin/: CMakeLists.txt
src/gain-plugin/resource/: editor.uidesc
src/gain-plugin/source/: cids.h  controller.cpp  controller.h  entry.cpp  pid.h  pids.h  processor.cpp  processor.h  version.h
src/plugin/source/: cids.h  processor.cpp
src/sin-tone-plugin/: CMakeLists.txt
src/sin-tone-plugin/source/: cids.h  controller.cpp  entry.cpp  pids.h  processor.cpp
src/sin-tone-plugin/source/params/: freq_param.cpp  freq_param.h
src/tone-generator-plugin/: CMakeLists.txt
src/tone-generator-plugin/resource/: editor.uidesc
src/tone-generator-plugin/source/: cids.h  controller.cpp  controller.h  entry.cpp  processor.cpp  processor.h  version.h
src/vstgui-hello-world-plugin/: CMakeLists.txt
src/vstgui-hello-world-plugin/resource/: editor.uidesc
src/vstgui-hello-world-plugin/source/: cids.h  controller.cpp  controller.h  entry.cpp  processor.cpp  processor.h  version.h
